<resources>
    <string name="app_name">Myapp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_setting">Settings</string>
    <string name="description_edit">请输入标题</string>
    <string name="title_text">标题</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="stoptime">截止时间</string>
    <string name="fintime">完成时间</string>
    <string name="type_text1">计划</string>
    <string name="type_text2">任务</string>
    <string name="tixing_text1">5分钟前</string>
    <string name="tixing_text2">10分钟前</string>
    <string name="tixing_text3">20分钟前</string>
    <string name="tixing_text4">30分钟前</string>
    <string name="default_title">学习新思想，争做新青年</string>
</resources>