<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="12dp"
    android:overScrollMode="ifContentScrolls">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/relativeLayout"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/title_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/title_edit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="@string/description_edit"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/title_text" />

        <TextView
            android:id="@+id/timetext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/endtime"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/title_text"
            app:layout_constraintTop_toBottomOf="@id/datepick1" />

        <TextView
            android:id="@+id/timetext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/starttime"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup" />

        <com.example.myapp.ui.add.MyDatePicker
            android:id="@+id/datepick2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/title_edit"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/title_text"
            app:layout_constraintTop_toBottomOf="@id/timetext2" />

        <com.example.myapp.ui.add.MyDatePicker
            android:id="@+id/datepick1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/title_edit"
            app:layout_constraintStart_toStartOf="@id/title_text"
            app:layout_constraintTop_toBottomOf="@id/timetext1" />

        <RadioGroup
            android:id="@+id/typeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/title_text">

            <RadioButton
                android:id="@+id/typeRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:checked="true"
                android:text="@string/type_text1" />

            <RadioButton
                android:id="@+id/typeRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type_text2" />
        </RadioGroup>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:columnCount="3"
            app:layout_constraintEnd_toEndOf="@+id/datepick2"
            app:layout_constraintStart_toStartOf="@+id/typeRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <CheckBox
                android:id="@+id/tixing1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tixing_text1" />

            <CheckBox
                android:id="@+id/tixing2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tixing_text2"
                tools:text="@string/tixing_text2" />

            <CheckBox
                android:id="@+id/tixing3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tixing_text3"
                tools:text="@string/tixing_text3" />

            <CheckBox
                android:id="@+id/tixing4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tixing_text4"
                tools:text="@string/tixing_text4" />
        </androidx.gridlayout.widget.GridLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="设置提醒"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/title_text"
            app:layout_constraintTop_toBottomOf="@+id/datepick2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/teal_200"
            app:srcCompat="@android:drawable/ic_delete" />

        <ImageButton
            android:id="@+id/OK"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/teal_200"
            app:srcCompat="@drawable/duigou"
            tools:ignore="VectorDrawableCompat" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>